--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ edition = "2018"
 openssl = ["open-ssl", "awc/openssl"]
 rustls = ["rust-tls", "awc/rustls"]
 
+[dev-dependencies]
+actix-rt = "1"
+
 [dependencies]
 awc = "2.0.0-beta.3"
 open-ssl = { version = "0.10", package = "openssl", optional = true }
